[package]
name = "toy-container"
version = "0.1.0"
authors = ["Hagi013 <generativepassion@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "container-1"
path = "src/container_1.rs"

[[bin]]
name = "container-pivot"
path = "src/container_pivot.rs"

[dependencies]
anyhow = "1.0.31"
nix = "0.17.0"
